# Packed_ADFA

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trie.hpp  utils.hpp
data/: convert_cities500.py  dataset.md
